2006-08-24  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix cache sweep for show_category_noteslist.

	* donrails/config/routes.rb: Add routing for show_category_noteslist pagination.

2006-08-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/comment_mailer.rb (CommentMailer::notify): Fix when ADMIN_MAILADD is not defined. (Thanks \ay.)

	* donrails/config/routes.rb: Add routing for show_category pagination.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix cache sweep for show_category.

2006-08-15  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/application_helper.rb: Fix: When image_dump path is not existed.

2006-08-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/notes/rdf_recent.rxml: Encode change to UTF-8.

	* donrails/app/views/shared/authorhead.rhtml: Encode change to UTF-8.

	* donrails/app/controllers/notes_controller.rb (NotesController::show_image): Fix. In case for wrong (non exist) id number is imputted.

2006-08-03  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::banlist_test_by_ar_string): Fix. I mistake column name in trackback table (wrong: blogname, correct: blog_name).

2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_indexabc): Add to test this fix.

	* donrails/app/controllers/notes_controller.rb (NotesController::indexabc): Fix for parameter parse.

2006-08-02  Akira TAGOH  <at@gclab.org>

	* donrails/tool/plugin-setup.rb: add --force option for installer.

2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* README.cache: Add new file.

	* donrails/app/controllers/notes_controller.rb (NotesController::noteslist): Cleanup.

	* donrails/config/routes.rb: More restrict for routing to 'indexabc'.
